--- a/templates/collection.html
+++ b/templates/collection.html
@@ -7,7 +7,7 @@
 </h2>
 <ul>
 {% for resource in resources %}
-    <li><a href="{{ prefix }}{{ resource.path }}">{{ resource.display_name }}</a></li>
+    <li><a href="{{ prefix }}{{ resource.path_as_url }}">{{ resource.display_name }}</a></li>
 {% endfor %}
 </ul>
 </html>
